update config file to disable qcow2

--- a/config
+++ b/config
@@ -85,3 +85,7 @@ STAGE_LIST="stage0 stage1 stage2 stage_shinage"
 #STAGE_LIST="stage0 stage1 stage2 ../stage_shinage"
 # (Default: stage*)
 # If set, then instead of working through the numeric stages in order, this list will be followed. For example setting to "stage0 stage1 mystage stage2" will run the contents of mystage before stage2. Note that quotes are needed around the list. An absolute or relative path can be given for stages outside the pi-gen directory.
+
+USE_QCOW2=0
+# See also https://github.com/RPi-Distro/pi-gen/blob/master/README.md#config .
+# Currently (2021-07-09) disabled, not sure why this breaks here.
